[gd_scene load_steps=4 format=3 uid="uid://ck1m23r5xyxot"]

[ext_resource type="Script" path="res://scripts/help_window/help_window_ui.gd" id="1_buopv"]
[ext_resource type="Theme" uid="uid://dvwbbu28fsu4k" path="res://resources/help_theme.tres" id="1_ciyua"]
[ext_resource type="Script" path="res://scripts/help_window/help_contents_view.gd" id="1_f1sko"]

[node name="HelpWindowUI" type="Control" node_paths=PackedStringArray("help_contents", "help_text")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ciyua")
script = ExtResource("1_buopv")
help_contents = NodePath("PanelContainer/VBoxContainer/HSplitContainer/ScrollContainer/HelpContents/MarginContainer/Tree")
help_text = NodePath("PanelContainer/VBoxContainer/HSplitContainer/MarginContainer/HelpText/RichTextLabel")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HelpContents" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/ScrollContainer/HelpContents"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/ScrollContainer/HelpContents/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HelpWindowCloseButton" type="Button" parent="PanelContainer/VBoxContainer/HSplitContainer/ScrollContainer/HelpContents/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "X"
icon_alignment = 1

[node name="ZoomOutButton" type="Button" parent="PanelContainer/VBoxContainer/HSplitContainer/ScrollContainer/HelpContents/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
text = "zoom out"

[node name="ZoomInButton" type="Button" parent="PanelContainer/VBoxContainer/HSplitContainer/ScrollContainer/HelpContents/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "zoom in"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/ScrollContainer/HelpContents"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5

[node name="Tree" type="Tree" parent="PanelContainer/VBoxContainer/HSplitContainer/ScrollContainer/HelpContents/MarginContainer"]
layout_mode = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("1_ciyua")
hide_root = true
script = ExtResource("1_f1sko")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.35
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HelpText" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HSplitContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HSplitContainer/MarginContainer/HelpText"]
layout_mode = 2
size_flags_vertical = 3
mouse_force_pass_scroll_events = false
bbcode_enabled = true
text = "Select an item in the contents tab to show help"
selection_enabled = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/HSplitContainer/ScrollContainer/HelpContents/MarginContainer2/HBoxContainer/HelpWindowCloseButton" to="." method="_on_help_window_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HSplitContainer/ScrollContainer/HelpContents/MarginContainer2/HBoxContainer/ZoomOutButton" to="." method="_on_zoom_out_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HSplitContainer/ScrollContainer/HelpContents/MarginContainer2/HBoxContainer/ZoomInButton" to="." method="_on_zoom_in_button_pressed"]
[connection signal="help_contents_item_selected" from="PanelContainer/VBoxContainer/HSplitContainer/ScrollContainer/HelpContents/MarginContainer/Tree" to="." method="_on_help_contents_item_selected"]
[connection signal="meta_clicked" from="PanelContainer/VBoxContainer/HSplitContainer/MarginContainer/HelpText/RichTextLabel" to="." method="_on_keyword_clicked"]
